Comment height coordinates no longer overlap
正直なんかわからんけど動いた。

--- a/src/component/Flow.module.styl
+++ b/src/component/Flow.module.styl
@@ -1,6 +1,8 @@
 .Flow
+  --height 0
   --progress 0
   position absolute
   white-space nowrap
 
+  top var(--height)
   right var(--progress)
